# guardian_backend

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
migrations/2021-05-13-161450_create_gurls/: down.sql  up.sql
migrations/2021-05-13-170653_insert_gurl/: down.sql  up.sql
migrations/2021-05-13-180008_delete_gurl/: down.sql  up.sql
migrations/2021-05-13-181045_get_gurl/: down.sql  up.sql
migrations/2021-05-16-153350_create_gurls/: down.sql  up.sql
migrations/2021-05-16-154013_get_gurl/: down.sql  up.sql
migrations/2021-05-16-210506_insert_gurl/: down.sql  up.sql
migrations/2021-05-16-212620_delete_gurl/: down.sql  up.sql
migrations/2021-05-24-205521_get_most_recently_added_gurl/: down.sql  up.sql
migrations/2021-05-28-101551_gurl_id_index/: down.sql  up.sql
migrations/2021-05-29-114935_get_gurls/: down.sql  up.sql
src/: data.rs  lib.rs  main.rs  schema.rs
src/api/v1/: check_ok.rs  gurl.rs  paths.rs
src/api/v2/: gurl.rs  gurl_most_recently_added.rs  gurls.rs  paths.rs
src/data/: database_pool.rs  gurl.rs  gurl_error.rs  gurls.rs
src/data/v1/: gurl.rs
src/models/v1/: gurl.rs
src/models/v2/: api_error.rs  database_method_error.rs  database_pool_error.rs  gurl.rs
src/server/: guardian_server.rs  paths.rs
src/server/v1/: guardian_server.rs
src/server/v2/: guardian_server.rs
tests/: tests.rs
tests/api_tests/v1_tests/: check_ok_tests.rs  gurl_tests.rs  gurls_tests.rs
tests/api_tests/v2_tests/: gurl_most_recently_added_tests.rs  gurl_tests.rs  (+1 more)
tests/data_tests/: database_pool_tests.rs  gurl_tests.rs  gurls_tests.rs
(+13 files in other folders)
