[package]
name = "guardian_backend"
version = "0.1.0"
authors = ["Otto Hermann <ojhermann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
diesel = { version = "1.4.2", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
